fix small screen double scroll problem with col-md-8

--- a/app/assets/stylesheets/custom_responsive.css.scss
+++ b/app/assets/stylesheets/custom_responsive.css.scss
@@ -96,6 +96,7 @@
 
   .col-md-8 {
     height: 100%;
+    overflow: auto;
   }
 
   .info-bar {
