--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -148,7 +148,6 @@ p {
 
 .col-md-8 {
   padding: 0 !important;
-  overflow: auto;
   background-color: white;
   min-height: 100% !important;
   width: 100%;
